--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
             </div>
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">Skills</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Pricing</a></li>
-                <li><a href="#">Contacts</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#about">About Us</a></li>
+                <li><a href="#price">Pricing</a></li>
+                <li><a href="#contact">Contacts</a></li>
             </ul>
 
             <button class="btn-nav">Let's Talk</button>
@@ -50,7 +50,7 @@
                 <img src="./assets/svg/Learning languages-bro 1.svg" alt="" />
             </div>
         </section>
-        <section class="skills">
+        <section class="skills" id="skills">
             <h1>Skills</h1>
             <br />
             <div class="grid">
@@ -102,7 +102,7 @@
                 </div>
             </div>
         </section>
-        <section class="about-us">
+        <section class="about-us" id="about">
             <div class="about-text">
                 <h1>About us</h1>
                 <p>
@@ -128,7 +128,7 @@
                 <img src="./assets/svg/about-us.svg" alt="" />
             </div>
         </section>
-        <section class="pricing">
+        <section class="pricing" id="price">
             <h1>Pricing</h1>
             <div class="pricing-row">
                 <div class="price-card">
@@ -169,7 +169,7 @@
                 </div>
             </div>
         </section>
-        <section class="contact-us">
+        <section class="contact-us" id="contact">
             <div class="contact-image">
                 <img src="./assets/svg/contact.svg" alt="" />
             </div>
