minor bug fixed

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="./css/price.css" />
         <link rel="stylesheet" href="./css/contact.css" />
         <link rel="stylesheet" href="./css/footer.css" />
-        <title>Document</title>
+        <title>Landing Page</title>
     </head>
     <body>
         <nav>
